Processed PR comments: added unsaved change