@@ -150,7 +150,7 @@ public class EricDownloadService
 							if (key.equals(DirectoryMetaData.BIOBANK_IT_STAFF_SIZE)
 									|| key.equals(DirectoryMetaData.BIOBANK_SIZE))
 							{
-								ericBiobank.set(key, new Double((double) entry.getValue()).intValue());
+								ericBiobank.set(key, Double.valueOf((double) entry.getValue()).intValue());
 							}
 							else
 							{
